src/objects/Ownership_Approval_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Ownership Approvals</relationshipLabel>
        <relationshipName>Account_Ownership_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RPSM Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner_RPSM__c</fullName>
        <formula>New_Owner__r.RPSM_New__r.FirstName  +&quot; &quot;+ New_Owner__r.RPSM_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Owner RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Ownership_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Email__c</fullName>
        <label>Old Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Owner_RPSM_Email__c</fullName>
        <label>Old Owner RPSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_Owner_RPSM__c</fullName>
        <label>Old Owner RPSM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <label>Old Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Account_Manager__c</fullName>
        <formula>IF( Account__r.Owner.RPSM_New__r.Username =  New_Owner__r.RPSM_New__r.Username , &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Same Account Manager</label>
        <type>Text</type>
    </fields>
    <label>Account Ownership Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All - Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Not</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <label>All - Not submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_inprogress</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>New_Owner_RPSM__c</columns>
        <columns>New_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Old_Owner_RPSM__c</columns>
        <columns>Old_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending RPSM Approval</value>
        </filters>
        <label>All - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_rejected</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Old_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>All - Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OAA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Ownership Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>